wordpresMysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  namespace: wordpress-prod
spec:
  type: ClusterIP
  selector:
    app: wordpress
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: wordpress-prod
spec:
  clusterIP: None
  selector:
    app: mysql
  ports:
    - name: mysql
      port: 3306
      targetPort: 3306
